--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.13",
+    "@tailwindcss/forms": "0.5.6",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
