--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.13",
+    "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.6",
     "next": "13.3.1",
+    "next-seo": "6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
