--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "1.7.13",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.6",
+    "aos": "2.3.4",
+    "axios": "1.6.1",
     "graphql": "^16.8.1",
     "next": "13.3.1",
     "next-seo": "6.1.0",
@@ -19,7 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "sass": "^1.66.1",
-    "swiper": "^10.3.0"
+    "swiper": "^10.3.0",
+    "uuid": "9.0.1"
   },
   "license": "MIT",
   "keywords": [
