--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "nextjs",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "post-update": "yarn upgrade --latest"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.8.6",
-    "@headlessui/react": "1.7.13",
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.6",
-    "aos": "2.3.4",
-    "axios": "1.6.1",
-    "graphql": "^16.8.1",
-    "next": "13.3.1",
-    "next-seo": "6.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
-    "sass": "^1.66.1",
-    "swiper": "^10.3.0",
-    "uuid": "9.0.1"
-  },
-  "license": "MIT",
-  "keywords": [
-    "next"
-  ],
-  "description": "A \"Hello World\" application with multiple pages that shows how Next.js routing works.",
-  "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3"
-  }
+	"name": "nextjs",
+	"version": "1.0.0",
+	"engines": {
+		"node": "22.x"
+	},
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start",
+		"post-update": "yarn upgrade --latest"
+	},
+	"dependencies": {
+		"@apollo/client": "^3.8.6",
+		"@headlessui/react": "1.7.13",
+		"@tailwindcss/aspect-ratio": "0.4.2",
+		"@tailwindcss/forms": "0.5.6",
+		"aos": "2.3.4",
+		"axios": "1.6.1",
+		"graphql": "^16.8.1",
+		"next": "13.3.1",
+		"next-seo": "6.1.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.11.0",
+		"sass": "^1.66.1",
+		"swiper": "^10.3.0",
+		"uuid": "9.0.1"
+	},
+	"license": "MIT",
+	"keywords": [
+		"next"
+	],
+	"description": "A \"Hello World\" application with multiple pages that shows how Next.js routing works.",
+	"devDependencies": {
+		"autoprefixer": "^10.4.15",
+		"postcss": "^8.4.29",
+		"tailwindcss": "^3.3.3"
+	}
 }
