--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"aos": "2.3.4",
 		"axios": "1.6.1",
 		"graphql": "^16.8.1",
-		"next": "13.3.1",
+		"next": "^15.4.2",
 		"next-seo": "6.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
